@@ -143,7 +143,7 @@
       <Unit0>
         <Filename Value="winst.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="5"/>
         <CursorPos X="26" Y="50"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -333,9 +333,9 @@
         <ComponentName Value="CentralForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="7"/>
-        <TopLine Value="134"/>
-        <CursorPos X="34" Y="148"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="830"/>
+        <CursorPos X="27" Y="852"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -407,7 +407,7 @@
       </Unit27>
       <Unit28>
         <Filename Value="changelog.txt"/>
-        <CursorPos Y="20"/>
+        <CursorPos Y="29"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -487,8 +487,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="337"/>
-        <CursorPos X="24" Y="333"/>
+        <TopLine Value="429"/>
+        <CursorPos X="3" Y="449"/>
         <UsageCount Value="209"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -497,8 +497,8 @@
       <Unit38>
         <Filename Value="osfunc.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
-        <TopLine Value="1101"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="1151"/>
         <CursorPos X="24" Y="1116"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
@@ -514,7 +514,7 @@
       <Unit39>
         <Filename Value="osfuncwin2.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="698"/>
         <CursorPos Y="730"/>
         <UsageCount Value="209"/>
@@ -533,10 +533,9 @@
       <Unit41>
         <Filename Value="osparser.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="-1"/>
-        <TopLine Value="7264"/>
-        <CursorPos X="101" Y="7305"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="18167"/>
+        <CursorPos X="30" Y="18176"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -544,6 +543,7 @@
           <CursorPos X="15" Y="14749"/>
         </ExtraEditor1>
         <UsageCount Value="209"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit41>
       <Unit42>
@@ -584,9 +584,9 @@
       <Unit44>
         <Filename Value="osconf.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
-        <TopLine Value="173"/>
-        <CursorPos X="19" Y="191"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="245"/>
+        <CursorPos X="78" Y="262"/>
         <UsageCount Value="205"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -603,9 +603,10 @@
       <Unit46>
         <Filename Value="osmain.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
-        <TopLine Value="1039"/>
-        <CursorPos X="30" Y="1071"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="1855"/>
+        <CursorPos X="48" Y="1870"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -877,7 +878,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="40" Y="32"/>
-        <UsageCount Value="126"/>
+        <UsageCount Value="129"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit78>
       <Unit79>
@@ -893,7 +894,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="126"/>
+        <UsageCount Value="129"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit80>
       <Unit81>
@@ -903,7 +904,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="126"/>
+        <UsageCount Value="129"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit81>
       <Unit82>
@@ -913,7 +914,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="126"/>
+        <UsageCount Value="129"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit82>
       <Unit83>
@@ -922,16 +923,15 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="6455"/>
         <CursorPos X="96" Y="6469"/>
-        <UsageCount Value="126"/>
+        <UsageCount Value="129"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit83>
       <Unit84>
         <Filename Value="..\common\oslog.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="3"/>
-        <TopLine Value="1269"/>
-        <CursorPos X="7" Y="1264"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="553"/>
+        <CursorPos X="17" Y="573"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <IsVisibleTab Value="True"/>
@@ -939,7 +939,7 @@
           <TopLine Value="177"/>
           <CursorPos X="66" Y="192"/>
         </ExtraEditor1>
-        <UsageCount Value="126"/>
+        <UsageCount Value="129"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit84>
@@ -947,9 +947,9 @@
         <Filename Value="..\common\oswebservice.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="2"/>
-        <TopLine Value="472"/>
-        <CursorPos X="5" Y="505"/>
-        <UsageCount Value="126"/>
+        <TopLine Value="4864"/>
+        <CursorPos X="52" Y="4889"/>
+        <UsageCount Value="129"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit85>
@@ -960,7 +960,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="126"/>
+        <UsageCount Value="129"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit86>
       <Unit87>
@@ -978,16 +978,16 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="126"/>
+        <UsageCount Value="129"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit88>
       <Unit89>
         <Filename Value="..\common\osjson.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="46"/>
         <CursorPos X="38" Y="58"/>
-        <UsageCount Value="116"/>
+        <UsageCount Value="119"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit89>
@@ -1027,130 +1027,130 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="25"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit94>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="..\common\oslog.pas"/>
-        <Caret Line="268" Column="29" TopLine="230"/>
+        <Filename Value="osinteractivegui.pas"/>
+        <Caret Line="148" Column="34" TopLine="134"/>
       </Position1>
       <Position2>
-        <Filename Value="..\common\oslog.pas"/>
-        <Caret Line="269" Column="29" TopLine="231"/>
+        <Filename Value="osbatchgui.pas"/>
+        <Caret Line="333" Column="24" TopLine="336"/>
       </Position2>
       <Position3>
         <Filename Value="osmain.pas"/>
-        <Caret Line="1860" Column="13" TopLine="1737"/>
+        <Caret Line="1927" Column="66" TopLine="1969"/>
       </Position3>
       <Position4>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1742" Column="42" TopLine="1734"/>
+        <Filename Value="..\common\oslog.pas"/>
+        <Caret Line="1229" Column="27" TopLine="1247"/>
       </Position4>
       <Position5>
-        <Filename Value="osinteractivegui.pas"/>
-        <Caret Line="980" Column="29" TopLine="962"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="2407" Column="121" TopLine="2387"/>
       </Position5>
       <Position6>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="2895" Column="5" TopLine="2872"/>
+        <Filename Value="osconf.pas"/>
+        <Caret Line="263" Column="40" TopLine="249"/>
       </Position6>
       <Position7>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="174" Column="15" TopLine="151"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="4898" Column="37" TopLine="4864"/>
       </Position7>
       <Position8>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1719" Column="11" TopLine="1696"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="395" Column="36" TopLine="376"/>
       </Position8>
       <Position9>
-        <Filename Value="osinteractivegui.pas"/>
-        <Caret Line="919" Column="12" TopLine="897"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="397" Column="36" TopLine="376"/>
       </Position9>
       <Position10>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1960" Column="22" TopLine="1921"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="4896" Column="58" TopLine="4864"/>
       </Position10>
       <Position11>
-        <Filename Value="..\common\oslog.pas"/>
-        <Caret Line="548" Column="75" TopLine="515"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="3423" Column="51" TopLine="3403"/>
       </Position11>
       <Position12>
-        <Filename Value="..\common\oslog.pas"/>
-        <Caret Line="652" Column="3" TopLine="629"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="3699" Column="40" TopLine="3677"/>
       </Position12>
       <Position13>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1071" Column="30" TopLine="1039"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="3840" Column="60" TopLine="3819"/>
       </Position13>
       <Position14>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="431" Column="31" TopLine="411"/>
+        <Caret Line="3919" Column="29" TopLine="3898"/>
       </Position14>
       <Position15>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="860" Column="37" TopLine="822"/>
+        <Caret Line="3923" Column="37" TopLine="3898"/>
       </Position15>
       <Position16>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="1037" Column="44" TopLine="999"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7305" Column="101" TopLine="7264"/>
       </Position16>
       <Position17>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="3707" Column="51" TopLine="3682"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="437" Column="14" TopLine="417"/>
       </Position17>
       <Position18>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="7533" Column="26" TopLine="7516"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="4898" Column="31" TopLine="4864"/>
       </Position18>
       <Position19>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="1120" Column="21" TopLine="1093"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="384" Column="30" TopLine="364"/>
       </Position19>
       <Position20>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="84" Column="27" TopLine="60"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="388" Column="30" TopLine="364"/>
       </Position20>
       <Position21>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="607" Column="34" TopLine="570"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="390" Column="30" TopLine="364"/>
       </Position21>
       <Position22>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="1120" Column="21" TopLine="1093"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="392" Column="30" TopLine="364"/>
       </Position22>
       <Position23>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="1124" Column="13" TopLine="1101"/>
+        <Filename Value="..\common\oswebservice.pas"/>
+        <Caret Line="395" Column="30" TopLine="364"/>
       </Position23>
       <Position24>
         <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="3909" Column="109" TopLine="3905"/>
+        <Caret Line="397" Column="30" TopLine="364"/>
       </Position24>
       <Position25>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="506" Column="14" TopLine="486"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1869" Column="58" TopLine="1861"/>
       </Position25>
       <Position26>
-        <Filename Value="osconf.pas"/>
-        <Caret Line="290" Column="30" TopLine="279"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="6082" Column="37" TopLine="6058"/>
       </Position26>
       <Position27>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="506" Column="37" TopLine="486"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1923" Column="22" TopLine="1851"/>
       </Position27>
       <Position28>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="4886" Column="42" TopLine="4851"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1068" Column="17" TopLine="1047"/>
       </Position28>
       <Position29>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="358" Column="43" TopLine="340"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="14811" Column="24" TopLine="14790"/>
       </Position29>
       <Position30>
-        <Filename Value="osconf.pas"/>
-        <Caret Line="264" Column="29" TopLine="243"/>
+        <Filename Value="osmain.pas"/>
+        <Caret Line="1451" Column="15" TopLine="1430"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
